js/src/jit-test/tests/errors/bug-1886940.js
// |jit-test| error: RangeError
[].with(Symbol.hasInstance);
